--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ ul > li > a:hover
 
 .slideUp 
 {
-    /* animation: slideUp 1.5s linear infinite; */
+    animation: slideUp 1.5s linear infinite;
     width: 7.9rem;
 }
 
@@ -157,17 +157,10 @@ ul > li > a:hover
 
 /* ========= Ultilities for sections ============= */
 
-.container
-{
-    padding-top: 4.5%;
-    height: 100vh;
-    /* width: 70vw; */
-    margin: 0 20%;
-}
 
 .title
 {
-    /* padding-top: 3rem; */
+    padding-top: 6rem;
     padding-bottom: 2rem;
     display: flex;
     justify-content: center;
@@ -179,6 +172,16 @@ ul > li > a:hover
 
 
 /*================ ABOUT ====================== */
+
+.container-about
+{
+    /* padding-top: 2%; */
+    height: 100vh;
+    margin: 0 20%;
+}
+
+
+
 
 .paragraph
 {
@@ -229,11 +232,20 @@ ul > li > a:hover
 
 /* =========== PROJECTS ================ */
 
-#projects
+#projects > hr
+{
+    /* width: 111rem; */
+    margin-bottom: 40px;
+}
+
+.container-projects
 {
     background-color: black;
-    padding-top: 4.5%;
+    /* padding-top: 4.5%; */
     height: 100vh;
+    padding: 0 20%;
+    /* padding: 0 370px; */
+    /* max-width: 1110px; */
 }
 
 #projects > h2
@@ -241,3 +253,109 @@ ul > li > a:hover
     color: white;
 }
 
+
+.container-cards
+{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    gap: 40px 40px;
+    max-width: 1110px;
+    margin: auto;
+}
+
+.card
+{
+    background-color: black;
+    width: 350px;
+    border: 2px solid white;
+    border-radius: 5px;
+    transition: all ease-in 0.1s;
+}
+
+
+.card:hover
+{
+
+    cursor: pointer;
+
+    transform: scale(1.025,1.025);
+
+    /* box-shadow: rgba(255, 255, 255, 0.726) 0px 10px 20px, rgba(255, 255, 255, 0.849) 0px 6px 6px; */
+
+    box-shadow: rgba(253, 252, 252, 0.774) 0px 3px 6px, rgba(238, 229, 229, 0.616) 0px 3px 6px;
+
+    /* box-shadow: rgba(255, 255, 255, 0.733) 20px 13px 27px -20px, rgb(255, 255, 255) 1px 8px 16px -6px; */
+}
+
+.card-img
+{
+    width: 350px;
+    height: 230px;
+}
+
+.card-info
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    padding: 4rem 2rem;
+    background-color: white;
+}
+
+.card-title
+{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    font-size: 2.3rem;
+    color: black;
+}
+
+
+.card-btn:hover
+{
+    opacity: 80%;
+}
+
+
+
+/* ============= CONTACT ================ */
+
+
+.container-contact
+{
+    height: 42vh;
+    margin: 0 20%;
+}
+
+.contact-info > p
+{
+    padding-top: 2rem;
+    font-size: 2.3rem;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    text-align: center;
+}
+
+.container-svg
+{
+    padding-top: 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8rem;
+}
+
+footer
+{
+    font-size: 1.7rem;
+    font-family: 'Montserrat', sans-serif;
+    padding-top: 1.5rem;
+    text-align: center;
+    height: 5vh;
+    background-color: var(--color1);
+}
