--- a/style.css
+++ b/style.css
@@ -351,6 +351,7 @@ ul > li > a:hover
     display: none;
     position: absolute;
     z-index: 2;
+    /* top: 0; */
     left: 0; 
     right: 0; 
     margin-left: auto; 
@@ -459,4 +460,131 @@ footer
     text-align: center;
     height: 5vh;
     background-color: var(--color1);
+}
+
+
+
+
+
+
+/* ============= RESPONSIVENESS ================= */
+
+
+@media (max-height: 720px)
+{
+
+    #home
+    {
+        gap: 28%;
+    }
+}
+
+
+
+@media (max-width: 1400px)
+{
+
+    /* about */
+
+    .title
+    {
+        padding-top: 2rem;
+        padding-bottom: 2rem;
+        font-size: 3.5rem;
+    }
+
+    .paragraph
+    {
+        font-size: 1.8rem;
+    }
+
+
+    .container-timeline
+    {
+        padding: 3% 0;
+    }
+
+    .icons
+    {
+        width: 7rem;
+    }
+
+    .icon-data
+    {
+        font-size: 1.7rem;
+    }
+
+    .icon-info
+    {
+        font-size: 1.8rem;
+    }
+
+
+    /* projects */
+
+    #projects
+    {
+        height: fit-content;
+        padding-bottom: 5rem;
+    }
+
+    #projects > hr
+    {
+        margin-bottom: 20px;
+    }
+
+    .container-cards
+    {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 25px 25px;
+        margin: 0 5rem;
+    }
+
+    .card
+    {
+        width: 350px;
+    }
+
+    .card-title
+    {
+        font-size: 2.2rem;
+    }
+
+
+    /* ===== cardShow ====== */
+
+   
+
+    .cardShow
+    {
+        position: relative;
+        width: 680px;
+        height: fit-content;
+        padding: 1.5rem 8rem;
+        font-size: 1.8rem;
+    }
+
+    .cardShow > img 
+    {
+        width: 500px;
+    }
+
+    .cardShow > p
+    {
+        padding-top: 1.5rem;
+        padding-bottom: 2.5rem;
+    }
+
+    
+    
+
+
+
+
+    footer
+    {
+        padding-bottom: 3.5rem;
+    }
+
+
 }
