--- a/style.css
+++ b/style.css
@@ -15,11 +15,15 @@
 
     --color1: rgb(245, 187, 111);
     --color2: rgb(248, 231, 210);
+
+
+    /* prevent to change the page colors with user's browser preferences */
+    color-scheme: light only;
 }
+
 /* rgb(246, 204, 148); */
 
 html {
-    color-scheme: dark light;
     scroll-behavior: smooth;
 }
 
@@ -93,6 +97,7 @@ ul > li > a:hover
     color: white;
     font-family: 'Montserrat', sans-serif;
     gap: 0.5rem;
+    text-align: center;
 }
 
 .home-content > h1
@@ -160,7 +165,7 @@ ul > li > a:hover
 
 .title
 {
-    padding-top: 6rem;
+    padding-top: 4rem;
     padding-bottom: 2rem;
     display: flex;
     justify-content: center;
@@ -188,7 +193,7 @@ ul > li > a:hover
     font-size: 2.3rem;
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
-    padding: 2% 5%;
+    padding: 3.5% 5%;
     text-align: center;
 }
 
@@ -198,6 +203,7 @@ ul > li > a:hover
     display: flex;
     padding: 7% 0%;
     gap: 7rem;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;     
 }
 
 .container-item
@@ -304,7 +310,7 @@ ul > li > a:hover
 
     /* box-shadow: rgba(255, 255, 255, 0.726) 0px 10px 20px, rgba(255, 255, 255, 0.849) 0px 6px 6px; */
 
-    box-shadow: rgba(253, 252, 252, 0.774) 0px 3px 6px, rgba(238, 229, 229, 0.616) 0px 3px 6px;
+    /* box-shadow: rgba(253, 252, 252, 0.774) 0px 3px 6px, rgba(238, 229, 229, 0.616) 0px 3px 6px; */
 
     /* box-shadow: rgba(255, 255, 255, 0.733) 20px 13px 27px -20px, rgb(255, 255, 255) 1px 8px 16px -6px; */
 }
@@ -358,7 +364,7 @@ ul > li > a:hover
     margin-right: auto; 
     background-color: white;
     width: 900px;
-    height: 750px;
+    height: fit-content;
     font-family: 'Montserrat', sans-serif;
     border-radius: 10px;
     font-size: 2rem;
@@ -470,21 +476,26 @@ footer
 /* ============= RESPONSIVENESS ================= */
 
 
-@media (max-height: 720px)
+@media (max-height: 800px)
 {
 
     #home
     {
-        gap: 28%;
+        gap: 26%;
     }
 }
 
 
-
-@media (max-width: 1400px)
+@media (max-width: 1400px) and (max-height: 800px)
 {
 
     /* about */
+
+    .container-about
+    {
+        margin-inline: 14.9%;
+        margin-bottom: 5rem;
+    }
 
     .title
     {
@@ -495,6 +506,7 @@ footer
 
     .paragraph
     {
+        padding: 2.5% 5%;
         font-size: 1.8rem;
     }
 
@@ -502,6 +514,9 @@ footer
     .container-timeline
     {
         padding: 3% 0;
+        box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;     
+        /* box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px; */
+        /* box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;*/
     }
 
     .icons
@@ -554,32 +569,56 @@ footer
     /* ===== cardShow ====== */
 
    
-
+    
     .cardShow
     {
-        position: relative;
-        width: 680px;
-        height: fit-content;
+        position: absolute;
+        width: 55vw;
+        height: 40vw;
         padding: 1.5rem 8rem;
-        font-size: 1.8rem;
+        font-size: 1.7rem;
     }
 
     .cardShow > img 
     {
-        width: 500px;
+        width: 450px;
     }
 
     .cardShow > p
     {
-        padding-top: 1.5rem;
-        padding-bottom: 2.5rem;
+        padding-top: 1rem;
+        padding-bottom: 2rem;
     }
 
+    .cardShow > button 
+    {
+        font-size: 1.5rem;
+        height: 3rem;
+    }
+
+
+    /* --- positioning each cardShow manually to stay exact where I want -------- */
+
+    .cardShowDC
+    {
+        transform: translate(0%, -25%);
+    }
     
-    
+    .cardShowMCC
+    {
+        transform: translate(0%, -25%);
+    }
 
+    .cardShowNFX
+    {
+        transform: translate(0%, 20%);
+    }
 
-
+    .cardShowFR
+    {
+        transform: translate(0%, 20%);
+    }
+    /* -------------------------------------------------- */
 
     footer
     {
@@ -587,4 +626,166 @@ footer
     }
 
 
+}
+
+
+/* dev tools = 455 x 650 */
+    
+@media (max-width: 480px)
+{
+    
+    .title
+    {
+        font-size: 2.5rem;
+    }
+    /* #home
+    {
+        gap: 26%;
+    } */
+
+
+    ul
+    {
+        gap: 3.2rem;
+        font-size: 1.9rem;
+    }
+
+    .home-content > h1
+    {
+        font-size: 5rem;
+    }
+
+    .home-content > p
+    {
+        font-size: 2.2rem;
+    }
+
+    
+    /* about */
+
+    .container-about
+    {
+        height: fit-content;
+    }
+
+    .paragraph
+    {
+        font-size: 1.8rem;
+    }
+
+    .container-timeline
+    {
+        padding: 8% 0%;
+        flex-direction: column;
+        gap: 3rem;
+    }
+
+    .icons
+    {
+        width: 5rem;
+    }
+
+    .icon-info
+    {
+        font-size: 1.7rem;
+    }
+
+    .p-bellow
+    {
+        padding-top: 3rem;
+    }
+
+
+    /* projects */
+
+
+    .container-cards
+    {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .card-title
+    {
+        font-size: 2rem;
+    }
+
+
+    /* cardshow */
+
+    .cardShow
+    {
+        position: absolute;
+        width: 80vw;
+        height: fit-content;
+        padding: 1.5rem 1rem;
+        font-size: 1.5rem;
+    }
+
+    .cardShow > img 
+    {
+        width: 350px;
+    }
+
+    .cardShow > p
+    {
+        padding-top: 1rem;
+        padding-bottom: 2rem;
+        text-align: justify;
+    }
+
+    .cardShow > button 
+    {
+        font-size: 1.5rem;
+        height: 2.5rem;
+    }
+
+
+    /* --- positioning each cardShow manually to stay exact where I want -------- */
+
+    .cardShowDC
+    {
+        transform: translate(0%, -85%);
+    }
+    
+    .cardShowMCC
+    {
+        transform: translate(0%, -35%);
+    }
+
+    .cardShowNFX
+    {
+        transform: translate(0%, 20%);
+    }
+
+    .cardShowFR
+    {
+        transform: translate(0%, 85%);
+    }
+
+
+    /* contact */
+
+    .contact-info > p
+    {
+        font-size: 1.8rem;
+    }
+
+    .container-links
+    {
+        padding-top: 2rem;
+        gap: 4.5rem;
+    }
+
+    .svg
+    {
+        width: 45px;
+    }
+    
+    footer
+    {
+        padding-top: 2.2rem;
+        height: 10vh;
+    }
+   
 }
