--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@
 }
 
 :root {
-    font-size: 62.5%; /* 1rem = 10px */
+    font-size: 62.5%; 
+    /* 1rem = 10px */
 
     --color1: rgb(245, 187, 111);
     --color2: rgb(248, 231, 210);
@@ -67,7 +68,7 @@ ul
     align-items: center;
     gap: 6rem;
     font-family: 'Raleway', sans-serif;
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-weight: 600;
     padding-top: 4rem;
     color: var(--color2);
@@ -165,11 +166,11 @@ ul > li > a:hover
 
 .title
 {
-    padding-top: 4rem;
+    padding-top: 3rem;
     padding-bottom: 2rem;
     display: flex;
     justify-content: center;
-    font-size: 5rem;
+    font-size: 4rem;
     font-weight: 700;
     font-family: 'Raleway', sans-serif;
     text-transform: uppercase;
@@ -186,11 +187,9 @@ ul > li > a:hover
 }
 
 
-
-
 .paragraph
 {
-    font-size: 2.3rem;
+    font-size: 1.85rem;
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     padding: 3.5% 5%;
@@ -201,7 +200,7 @@ ul > li > a:hover
 .container-timeline
 {
     display: flex;
-    padding: 7% 0%;
+    padding: 4% 2%;
     gap: 7rem;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;     
 }
@@ -215,12 +214,12 @@ ul > li > a:hover
 
 .icons 
 {
-    width: 10rem;
+    width: 8rem;
 }
 
 .icon-data
 {
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
     border-bottom: 1px solid black;
@@ -228,13 +227,17 @@ ul > li > a:hover
 
 .icon-info
 {
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     padding-top: 2rem;
     text-align: center;
 }
 
+.p-bellow
+{
+    padding-top: 5%;
+}
 
 /* =========== PROJECTS ================ */
 
@@ -247,7 +250,7 @@ ul > li > a:hover
 #projects > hr
 {
     /* width: 111rem; */
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 }
 
 .shadow{
@@ -286,7 +289,7 @@ ul > li > a:hover
     align-items: center;
     justify-content: center;
     text-align: center;
-    gap: 40px 40px;
+    gap: 30px 30px;
     max-width: 1110px;
     margin: auto;
 }
@@ -315,11 +318,12 @@ ul > li > a:hover
     /* box-shadow: rgba(255, 255, 255, 0.733) 20px 13px 27px -20px, rgb(255, 255, 255) 1px 8px 16px -6px; */
 }
 
-.card-img
+/* .card-img
 {
+    remove
     width: 350px;
     height: 230px;
-}
+} */
 
 .card-info
 {
@@ -363,18 +367,18 @@ ul > li > a:hover
     margin-left: auto; 
     margin-right: auto; 
     background-color: white;
-    width: 900px;
+    width: 700px;
     height: fit-content;
     font-family: 'Montserrat', sans-serif;
     border-radius: 10px;
-    font-size: 2rem;
+    font-size: 1.7rem;
     box-shadow: rgba(255, 255, 255, 0.733) 20px 13px 27px -20px, rgb(255, 255, 255) 1px 8px 16px -6px;
-    padding: 2rem 14rem;
+    padding: 2rem 7rem;
 }
 
 .cardShow > img 
 {
-    width: 650px;
+    width: 550px;
 }
 
 .cardShow > p
@@ -421,7 +425,7 @@ ul > li > a:hover
 
 .container-contact
 {
-    height: 42vh;
+    height: 40vh;
     margin: 0 20%;
 }
 
@@ -432,7 +436,7 @@ ul > li > a:hover
     align-items: center;
     justify-content: center; */
     padding-top: 2rem;
-    font-size: 2.3rem;
+    font-size: 2rem;
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     text-align: center;
@@ -447,6 +451,10 @@ ul > li > a:hover
     gap: 8rem;
 }
 
+.svg
+{
+
+}
 
 /* .upBtn
 {
@@ -460,9 +468,12 @@ ul > li > a:hover
 
 footer
 {
-    font-size: 1.7rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 3rem;
+    font-size: 1.5rem;
     font-family: 'Montserrat', sans-serif;
-    padding-top: 1.5rem;
     text-align: center;
     height: 5vh;
     background-color: var(--color1);
@@ -489,6 +500,18 @@ footer
 @media (max-width: 1400px) and (max-height: 800px)
 {
 
+    /* home */
+
+    .home-content > h1
+    {
+        font-size: 7rem;
+    }
+
+    .home-content > p
+    {
+        font-size: 2.5rem;
+    }
+
     /* about */
 
     .container-about
@@ -507,7 +530,7 @@ footer
     .paragraph
     {
         padding: 2.5% 5%;
-        font-size: 1.8rem;
+        font-size: 1.5rem;
     }
 
 
@@ -515,23 +538,22 @@ footer
     {
         padding: 3% 0;
         box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;     
-        /* box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px; */
-        /* box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;*/
+        gap: 6;
     }
 
     .icons
     {
-        width: 7rem;
+        width: 6rem;
     }
 
     .icon-data
     {
-        font-size: 1.7rem;
+        font-size: 1.5rem;
     }
 
     .icon-info
     {
-        font-size: 1.8rem;
+        font-size: 1.5rem;
     }
 
 
@@ -574,14 +596,14 @@ footer
     {
         position: absolute;
         width: 55vw;
-        height: 40vw;
-        padding: 1.5rem 8rem;
-        font-size: 1.7rem;
+        height: fit-content;
+        padding: 1.5rem 4rem;
+        font-size: 1.5rem;
     }
 
     .cardShow > img 
     {
-        width: 450px;
+        width: 380px;
     }
 
     .cardShow > p
@@ -619,6 +641,12 @@ footer
         transform: translate(0%, 20%);
     }
     /* -------------------------------------------------- */
+
+
+    .container-contact
+    {
+        height: 50vh;
+    }
 
     footer
     {
@@ -710,6 +738,10 @@ footer
         font-size: 2rem;
     }
 
+    .card
+    {
+        width: 300px;
+    }
 
     /* cardshow */
 
@@ -765,6 +797,11 @@ footer
 
 
     /* contact */
+
+    .container-contact
+    {
+        height: 37vh;
+    }
 
     .contact-info > p
     {
