--- a/style.css
+++ b/style.css
@@ -488,6 +488,9 @@ footer
 /* ============= RESPONSIVENESS ================= */
 
 
+
+
+
 @media (max-height: 800px)
 {
 
@@ -497,7 +500,7 @@ footer
     }
 }
 
-
+/* laptop */
 @media (max-width: 1400px) and (max-height: 800px)
 {
 
@@ -658,8 +661,99 @@ footer
 }
 
 
+
+@media (max-width: 1250px)
+{
+    #home
+    {
+        gap: 30%;
+    }
+
+    .container-about
+    {
+        height: fit-content;
+    }
+    .container-timeline
+    {
+        flex-direction: column;
+    }
+
+    #projects
+    {
+        height: fit-content;
+        padding-bottom: 5rem;
+    }
+
+    #projects > hr
+    {
+        margin-bottom: 20px;
+    }
+
+    .container-cards
+    {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 25px 25px;
+        margin: 0 5rem;
+    }
+
+    .card
+    {
+        width: 290px;
+    }
+
+    .card-title
+    {
+        font-size: 1.95rem;
+    }
+}
+
+@media (max-width: 640px)
+{
+
+    .home-content > h1
+    {
+        font-size: 8rem;
+    }
+
+    .home-content > p 
+    {
+        font-size: 2.8rem;
+    }
+
+    .container-cards
+    {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .cardShow
+    {
+        position: absolute;
+        width: 80vw;
+        height: fit-content;
+        padding: 1.5rem 1rem;
+        font-size: 1.5rem;
+    }
+
+
+    .cardShow > p
+    {
+        padding-top: 1rem;
+        padding-bottom: 2rem;
+        text-align: justify;
+    }
+
+    .cardShow > button 
+    {
+        font-size: 1.5rem;
+        height: 2.5rem;
+    }
+    
+}
+
 /* dev tools iphone11= 418 x 700 */
-   
+
+/* mobile */
 @media (max-width: 480px)
 {
     
@@ -753,10 +847,6 @@ footer
         font-size: 1.5rem;
     }
 
-    .cardShow > img 
-    {
-        width: 350px;
-    }
 
     .cardShow > p
     {
