--- a/style.css
+++ b/style.css
@@ -834,6 +834,13 @@ footer
 
     /* projects */
 
+    .container-projects
+    {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding-inline: 0;
+    }
 
     .container-cards
     {
