fix height of container projects

--- a/style.css
+++ b/style.css
@@ -275,7 +275,7 @@ ul > li > a:hover
     background-color: black;
     margin: auto;
     /* padding-top: 4.5%; */
-    height: 100vh;
+    height: fit-content;
     padding-inline:20%;
     padding-bottom: 3%;
 }
