improve about section

--- a/style.css
+++ b/style.css
@@ -204,6 +204,8 @@ ul > li > a:hover
 {
     display: flex;
     padding: 4% 2%;
+    width: fit-content;
+    margin-inline: auto;
     gap: 7rem;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;     
 }
