adding border-radius to container-timeline

--- a/style.css
+++ b/style.css
@@ -208,6 +208,7 @@ ul > li > a:hover
     margin-inline: auto;
     gap: 7rem;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;     
+    border-radius: 20px;
 }
 
 .container-item
